--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
@@ -30,7 +30,7 @@
 }
 
 .breakpoint-navigation-status-container {
-  min-width: 60px;
+  min-width: 50px;
   display: flex;
   justify-content: flex-end;
 }
@@ -38,13 +38,13 @@
 .breakpoint-navigation-status {
   color: var(--theme-comment);
   border-radius: 4px;
-  padding: 2px 4px;
+  padding: 2px 6px;
 }
 
 .breakpoint-navigation-timeline-container {
   overflow-x: hidden;
   padding: 0px 4px;
-  margin: 0px 12px;
+  margin: 0px 4px;
   flex-grow: 1;
   display: flex;
 }
@@ -55,9 +55,9 @@
   flex-grow: 1;
   background: #e4eaf5;
   position: relative;
-  border-radius: 5px;
   width: 100%;
   align-items: center;
+  overflow: hidden;
 }
 
 .breakpoint-navigation-timeline-point {
@@ -92,4 +92,12 @@
 
 .breakpoint-navigation-timeline-point.pause .stroke {
   stroke: var(--replaying-paused-marker-stroke);
+}
+
+.breakpoint-navigation-timeline-pause-marker {
+  position: absolute;
+  height: 100%;
+  background: var(--replay-head-background);
+  width: 1px;
+  z-index: var(--z-index-1--paused-message);
 }
