Toggling the toolbox

--- a/src/devtools/client/debugger/src/components/App.css
+++ b/src/devtools/client/debugger/src/components/App.css
@@ -23,7 +23,7 @@ button:focus {
   background-color: var(--theme-toolbar-hover);
 }
 
-.debugger {
+.split-box .debugger {
   display: flex;
   flex: 1;
   height: 100%;
