--- a/src/ui/components/Dashboard/RecordingItem/RecordingItem.css
+++ b/src/ui/components/Dashboard/RecordingItem/RecordingItem.css
@@ -1,63 +1,93 @@
 .recording-list.list {
   overflow: auto;
   height: 100%;
-  /* display: grid; */
-  display: flex;
-  flex-direction: column;
-  list-style-type: none;
-  margin: 0 auto;
-  /* max-width: 1040px; */
-  font-size: 14px;
-  color: var(--theme-body-color);
 }
 
-.recording-list.list > * {
+.recording-list.list table.dashboard-viewer-content-table {
   display: grid;
-  grid-template-columns: auto 100px 2fr 2fr 0.5fr 0.5fr 0.5fr 40px 24px;
-  gap: 40px;
-  padding: 20px 40px 20px 20px;
+  grid-template-columns: auto 140px 2fr 2fr 0.5fr 0.5fr 0.5fr auto auto;
+}
+
+/* Table Body styling */
+
+.recording-list.list tbody.dashboard-viewer-content-body,
+.recording-list.list tbody.dashboard-viewer-content-body tr {
+  display: contents;
+}
+
+.recording-list.list tbody.dashboard-viewer-content-body td {
+  display: flex;
+  align-items: center;
+  padding: 20px;
   border-bottom: 1px solid var(--theme-splitter-color);
+  transition: background 200ms;
 }
 
-.recording-list.list > * > * {
-  align-self: center
+.recording-list.list .recording-item:hover td {
+  background: var(--theme-toolbarbutton-hover-background);
 }
 
-.recording-list.list > .dashboard-viewer-content-header {
+.recording-list.list tbody.dashboard-viewer-content-body td:first-child {
+  padding-left: 40px;
+}
+
+.recording-list.list tbody.dashboard-viewer-content-body td:last-child {
+  padding-right: 40px;
+}
+
+/* Table Header styling */
+
+.recording-list.list thead.dashboard-viewer-content-header {
+  display: contents;
   font-size: 1rem;
   font-weight: 700;
-  border-top: 1px solid var(--theme-splitter-color);
   color: var(--theme-text-color-inactive);
+}
+
+.recording-list.list thead.dashboard-viewer-content-header tr {
+  display: contents;
+}
+
+.recording-list.list thead.dashboard-viewer-content-header th {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid var(--theme-splitter-color);
   position: sticky;
   top: 0px;
   background: white;
 }
 
-.recording-list.list > .dashboard-viewer-content-header > * {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 20px;
-}
-
-.recording-list.list > .dashboard-viewer-content-header > * .img {
+.recording-list.list thead.dashboard-viewer-content-header .img {
   background: var(--theme-text-color-inactive);
 }
 
-.recording-list.list > .dashboard-viewer-content-header .sorter {
+.recording-list.list thead.dashboard-viewer-content-header .sorter {
   cursor: pointer;
 }
 
-.recording-list.list > .dashboard-viewer-content-header .sorter.label {
+.recording-list.list thead.dashboard-viewer-content-header .sorter.label {
   margin-right: 2px;
 }
 
-.recording-list.list > .dashboard-viewer-content-header .sorter:hover .label {
+.recording-list.list thead.dashboard-viewer-content-header .sorter:hover .label {
   color: var(--theme-text-color-alt);
 }
 
-.recording-list.list > .dashboard-viewer-content-header .sorter:hover .img {
+.recording-list.list thead.dashboard-viewer-content-header .sorter:hover .img {
   background: var(--theme-text-color-alt);
+}
+
+/* Recording Item styling */
+
+.recording-list.list .recording-item {
+  font-size: 14px;
+  color: var(--theme-body-color);
+  cursor: pointer;
+}
+
+.recording-list.list .recording-item.selected:hover {
+  background: hsl(201, 80%, 90%);
 }
 
 .recording-list.list .recording-item .screenshot {
@@ -65,26 +95,12 @@
   height: 100%;
 }
 
-.recording-list.list .recording-item {
-  transition-duration: 200ms;
-  cursor: pointer;
-}
-
-.recording-list.list .recording-item:hover {
-  background-color: var(--theme-toolbarbutton-hover-background);
-}
-
 .recording-list.list .recording-item.selected {
-  background-color: hsl(201, 88%, 95%);
+  background: hsl(201, 88%, 95%);
   border-bottom: 1px solid hsl(201, 88%, 95%);
 }
 
-.recording-list.list .recording-item.selected:hover {
-  background-color: hsl(201, 80%, 90%);
-}
-
 .recording-list.list .recording-item .screenshot img {
-  height: 100%;
   width: 100%;
   object-fit: contain;
   height: 60px;
@@ -164,7 +180,7 @@
 
 .recording-list.list .recording-item .item-title-label-actions button:hover .img,
 .recording-list.list .recording-item .item-title-label-actions button.clicked .img {
-  background-color: white;
+  background: white;
 }
 
 .recording-list.list .recording-item .owner {
@@ -180,9 +196,22 @@
   padding: 4px;
   border-radius: 4px;
   visibility: hidden;
+  height: auto;
 }
 
-.recording-list.list .recording-item:hover .more button {
+.recording-list.list .recording-item .dropdown-block {
+  height: auto;
+}
+
+.recording-list.list .recording-item .more button {
+  cursor: pointer;
+  padding: 4px;
+  border-radius: 4px;
+  visibility: hidden;
+  height: auto;
+}
+
+:not(.editing) .recording-list.list .recording-item:hover .more button {
   visibility: visible;
 }
 
