--- a/src/devtools/client/debugger/src/components/shared/Button/styles/PaneToggleButton.css
+++ b/src/devtools/client/debugger/src/components/shared/Button/styles/PaneToggleButton.css
@@ -19,8 +19,7 @@
   margin-inline-start: 0px;
 }
 
-html[dir="rtl"] .toggle-button.start .img,
-html[dir="ltr"] .toggle-button.end:not(.vertical) .img {
+.toggle-button.end:not(.vertical) .img {
   transform: scaleX(-1);
 }
 
