Move comments to secondary toolbar
new redesign

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,8 @@
 #outer-viewer {
   overflow: hidden;
   display: flex;
+  /* jaril1 */
+  flex-direction: column;
   background-color: #ececec;
   flex-grow: 1;
   position: relative;
