--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -33,6 +33,7 @@
 /* Split Console styles */
 .toolbox-top-panels {
   width: 100%;
+  height: 100%;
 }
 .toolbox-top-panels .toolbox-panel.active {
   display: block;
