--- a/src/devtools/client/debugger/src/components/SecondaryPanes/SecondaryPanes.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/SecondaryPanes.css
@@ -26,7 +26,9 @@
 */
 
 .secondary-panes-wrapper {
-  height: 100%;
+  /* this shows a scrollbar in the sidebar even though the content
+  doesn't need it jaril2 */
+  /* height: 100%; */
   width: 100%;
   display: flex;
   flex-direction: column;
