--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -3,7 +3,7 @@
   width: 100%;
   font-family: sans-serif;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   --toolbox-background: #f9f9fa;
   --paused-background-color: #5b41ff;
 }
@@ -16,7 +16,8 @@
 }
 
 #toolbox-toolbar {
-  height: 35px;
+  display: flex;
+  flex-direction: column;
   border-top: 0px;
   background: var(--theme-toolbar-background);
   border-bottom: 1px solid var(--theme-splitter-color);
@@ -27,6 +28,7 @@
   position: relative;
   overflow: hidden;
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
 }
 
@@ -61,9 +63,11 @@
 }
 
 .toolbar-panel-icon {
-  width: 16px;
-  height: 16px;
-  margin-right: 5px;
+  width: 24px;
+  height: 24px;
+  mask-repeat: no-repeat;
+  mask-size: cover;
+  margin: 12px 5px 12px 0px;
 }
 
 .toolbar-panel-button.active {
