--- a/src/devtools/client/themes/inspector.css
+++ b/src/devtools/client/themes/inspector.css
@@ -39,7 +39,7 @@ window {
 
 #inspector-splitter-box {
   height: 100%;
-  width: 100vw;
+  width: 100%;
 }
 
 /* Minimum dimensions for the Inspector splitter areas. */
