--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   border-top: 0px;
   background: var(--theme-toolbar-background);
-  border-bottom: 1px solid var(--theme-splitter-color);
+  border-right: 1px solid var(--theme-splitter-color);
 }
 
 #toolbox-contents {
@@ -67,7 +67,7 @@
   height: 24px;
   mask-repeat: no-repeat;
   mask-size: cover;
-  margin: 12px 5px 12px 0px;
+  margin: 8px 4px;
 }
 
 .toolbar-panel-button.active {
